--- a/package.json
+++ b/package.json
@@ -24,5 +24,8 @@
     "webpack": "^5.99.7",
     "webpack-cli": "^6.0.1",
     "webpack-dev-server": "^5.2.1"
+  },
+  "dependencies": {
+    "moment": "^2.30.1"
   }
 }
